# eloquent-notes

./: .code-reducer.yaml  .gitignore  AGENTS.md  README.md  fix_deps.py  pyproject.toml
docs/: index.html  styles.css
eloquent_notes/: __init__.py  app.py  audio.py  autostart.py  config.py  config.yaml  llm.py  logging_utils.py  main.py  obsidian.py  ui.py
eloquent_notes/config_gui/: __init__.py  constants.py  dialog.py  loader.py  styles.py  utils.py
eloquent_notes/config_gui/tabs/: __init__.py  ai.py  audio.py  base.py  general.py  obsidian.py  prompts.py  templates.py  text_files.py
eloquent_notes/prompts/: classification_system.md  classification_user.md  obsidian_enrich_system_prompt.md  obsidian_enrich_user_prompt.md  obsidian_tags_system_prompt.md  obsidian_tags_user_prompt.md  retry_prompt.md  rewriting_system.md  rewriting_user.md  system_prompt.md  transcription_system.md  transcription_user.md  user_prompt.md
eloquent_notes/templates/: daily_append.md  daily_new.md  standalone.md
wiki/: .metadata.json  architecture.md  quickstart.md
wiki/modules/: README.md  eloquent_notes.md  eloquent_notes_config_gui.md  eloquent_notes_config_gui_tabs.md  eloquent_notes_templates.md  root.md
wiki/modules/eloquent_notes/: README.md
wiki/modules/eloquent_notes/config_gui/: README.md
wiki/modules/eloquent_notes/config_gui/tabs/: README.md
wiki/modules/eloquent_notes/templates/: README.md
